# interactive-logic-prover

./: README.md  ilp.cabal
app/: Command.hs  Cursor.hs  Highlight.hs  Main.hs
src/Core/: Expression.hs  Parser.hs
